--- a/Little Caesar/Cube2.html
+++ b/Little Caesar/Cube2.html
@@ -481,7 +481,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i19.i62.image.html:image/html-->
 <img id="i62" src="https://i.imgur.com/dXxxt3R.png"/>
 <!--#/#--><!--#i19.i78.text.html:text/html-->
-<div id="i78">La mejor pizza de Athahuacan esta cerca de tí.</div>
+<div id="i78">La mejor pizza de Aztahuacan esta cerca de tí.</div>
 <!--#/#--><!--#i19.i86.image.html:image/html-->
 <img id="i86" src="https://i.imgur.com/N2PvGOK.png"/>
 <!--#/#--><!--#i19.i122.shape.html:shape/html-->
@@ -536,7 +536,7 @@ var cube_i4 = new Adform.FlexGallery({
     animationDuration: '0.8',
     autoAnimationEnabled: 'true',
     autoAnimationDelay: '2.2',
-    autoAnimationTime: '28',
+    autoAnimationTime: '80000',
     defaultButtons: 'false',
     panelButtons: 'true',
     buttonsDirection: 'horizontal',
@@ -724,7 +724,7 @@ var el = document.getElementById('i30');
 
 el.addEventListener('click', function(e){
     /*#i56.i57.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+   
 /*#/#*/
 });
 
@@ -781,7 +781,7 @@ var el = document.getElementById('i41');
 
 el.addEventListener('click', function(e){
     /*#i58.i59.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+
 /*#/#*/
 });
 
@@ -809,7 +809,7 @@ family: Source Sans Pro;
 /*#/#*//*#i4.cube.meta:cube/meta.4*/
 name: Cube;
 customName: 1;
-data: /*!*/{"mode":"simple"}/*!*/;
+data: /*!*/{"mode":"advanced"}/*!*/;
 /*#/#*//*#i4.i8.cube-panel.meta:cube-panel/meta.1*/
     name: Cube Panel 1;
 /*#/#*//*#i8.i9.shape.meta:shape/meta*/
@@ -855,7 +855,7 @@ customName: false;
 /*#/#*//*#i62.i63.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i19.i78.text.meta:text/meta*/
-name: La mejor pizza de Athahuacan esta cerca de tí.; customName: false;
+name: La mejor pizza de Aztahuacan esta cerca de tí.; customName: false;
 /*#/#*//*#i78.i79.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i19.i86.image.meta:image/meta*/
