--- a/Victorias secret/hover-text-big2.html
+++ b/Victorias secret/hover-text-big2.html
@@ -111,13 +111,13 @@
 
             <div class="imgBx">
                 
-              <iframe  src="fade-hover.html" width="300" height="600" frameborder="0" scrolling="no" align="center"></iframe>
+              <iframe  src="fade-completo2.html" width="300" height="600" frameborder="0" scrolling="no" align="center"></iframe>
             </div>
 
 
             <div class="details">
                 <div style="margin-left: -30px; margin-top:-60px; cursor: pointer;">
-                <a href="https://goo.gl/maps/DUKV5QXZzmT2" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/HiH3k7p.jpg"> </a></div>
+                <a href="https://goo.gl/maps/iVB569UEMj22" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/DwVRgEn.jpg"> </a></div>
 
              
 
