--- a/Victorias secret/Cube.html
+++ b/Victorias secret/Cube.html
@@ -812,7 +812,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/KQinLmx.jpg"/>
 <!--#/#--><!--#i4.i214.image.html:image/html-->
-<img id="i214" src="https://i.imgur.com/NHXEESu.jpg"/>
+<img id="i214" src="https://i.imgur.com/4W22b7q.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#--><!--#i4.i224.image.html:image/html-->
@@ -840,7 +840,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/3rNsjPu.jpg"/>
 <!--#/#--><!--#i6.i218.image.html:image/html-->
-<img id="i218" src="https://i.imgur.com/NHXEESu.jpg"/>
+<img id="i218" src="https://i.imgur.com/4W22b7q.png"/>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
 <div id="i34">Encuentra tu combinación ideal. ¡Localiza tu tienda más cercana!</div>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
@@ -913,11 +913,7 @@ bmShow('i224');
 /* Name: On Click; */
 var el = document.getElementById('i224');
 
-el.addEventListener('click', function(e){
-    /*#i226.i227.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
+
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -926,7 +922,7 @@ if ('click' === 'click') {
 /* Name: On Click; */
 
 /*#/#*//*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+
 /*#/#*//*#i5.i58.image.js:image/base/js*/
 
 /*#/#*//*#i5.i216.image.js:image/base/js*/
@@ -954,11 +950,7 @@ bmShow('i228');
 /* Name: On Click; */
 var el = document.getElementById('i228');
 
-el.addEventListener('click', function(e){
-    /*#i230.i231.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
+
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -967,7 +959,7 @@ if ('click' === 'click') {
 /* Name: On Click; */
 
 /*#/#*//*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+
 /*#/#*//*#i6.i60.image.js:image/base/js*/
 
 /*#/#*//*#i6.i218.image.js:image/base/js*/
@@ -995,11 +987,6 @@ bmShow('i232');
 /* Name: On Click; */
 var el = document.getElementById('i232');
 
-el.addEventListener('click', function(e){
-    /*#i234.i235.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -1008,7 +995,7 @@ if ('click' === 'click') {
 /* Name: On Click; */
 
 /*#/#*//*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+
 /*#/#*//*#i183.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
