--- a/Little Caesar/hover-text-big.html
+++ b/Little Caesar/hover-text-big.html
@@ -103,7 +103,7 @@
 
             <div class="imgBx">
                 
-                <img src="https://i.imgur.com/xAu9ezh.gif">
+                <img src="https://i.imgur.com/iR8Y3h1.gif">
             </div>
 
 
