--- a/office depot/Cube3.html
+++ b/office depot/Cube3.html
@@ -808,7 +808,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i186.image.html:image/html-->
 <img id="i186" src="https://i.imgur.com/BH0i4fF.jpg"/>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">Sólo del 18 al 21 de Febrero! 20% de descuento en Laptops Lenovo seleccionadas. Exclusivo por internet.</div>
+<div id="i14">¡Sólo del 18 al 21 de Febrero! 20% de descuento en Laptops Lenovo seleccionadas. Exclusivo por internet.</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/v3lfIfX.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
@@ -826,7 +826,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i184.image.html:image/html-->
 <img id="i184" src="https://i.imgur.com/BH0i4fF.jpg"/>
 <!--#/#--><!--#i5.i24.text.html:text/html-->
-<div id="i24">Sólo del 18 al 21 de Febrero! 3x2 en todos los Consumibles Brother. Exclusivo por internet.</div>
+<div id="i24">¡Sólo del 18 al 21 de Febrero! 3x2 en todos los Consumibles Brother. Exclusivo por internet.</div>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#-->
@@ -838,7 +838,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i181.image.html:image/html-->
 <img id="i181" src="https://i.imgur.com/BH0i4fF.jpg"/>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
-<div id="i34">Sólo del 18 al 21 de Febrero! Precio especial en Bocinas seleccionadas. Exclusivo por internet.</div>
+<div id="i34">¡Sólo del 18 al 21 de Febrero! Precio especial en Bocinas seleccionadas. Exclusivo por internet.</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/ZcSbkvO.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
