--- a/office depot/fade-completo2.html
+++ b/office depot/fade-completo2.html
@@ -131,20 +131,20 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/VSyNe9X.png");
+            background: url("https://i.imgur.com/PYh7pqi.png");
             background-size: cover;
 
         }
 
         .bg.cover-2 {
-            background: url("https://i.imgur.com/mNoCi4D.png");
+            background: url("https://i.imgur.com/BhZAxPE.png");
             background-size: cover;
 
             
         }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/8NpJ87h.png");
+            background: url("https://i.imgur.com/dc559PT.png");
             background-size: cover;
           
         }
