--- a/office depot/Cube3.html
+++ b/office depot/Cube3.html
@@ -892,7 +892,7 @@ bmShow('i186');
 /* Name: On Click; */
 document.getElementById('i91').addEventListener('click', function(e){
     /*#i177.i178.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.officedepot.com.mx/officedepot/en/Enamorate-de-la-tecnologia?utm_source=Mosaic_Mobile&utm_medium=Banner_MKT_14_y_15_FEB&utm_campaign=MKT_14_y_15_FEB&utm_term=Paid&utm_content=OD'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.officedepot.com.mx/officedepot/en/Gran-Venta-Especial-por-internet?utm_source=Mosaic&utm_medium=Banner_18_al_21_Febrero&utm_campaign=Ec_18_al_21_Febrero&utm_term=Paid&utm_content=OD'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
@@ -912,7 +912,7 @@ bmShow('i184');
 /* Name: On Click; */
 document.getElementById('i95').addEventListener('click', function(e){
     /*#i175.i176.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.officedepot.com.mx/officedepot/en/Enamorate-de-la-tecnologia?utm_source=Mosaic_Mobile&utm_medium=Banner_MKT_14_y_15_FEB&utm_campaign=MKT_14_y_15_FEB&utm_term=Paid&utm_content=OD'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.officedepot.com.mx/officedepot/en/Gran-Venta-Especial-por-internet?utm_source=Mosaic&utm_medium=Banner_18_al_21_Febrero&utm_campaign=Ec_18_al_21_Febrero&utm_term=Paid&utm_content=OD'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
@@ -930,7 +930,7 @@ bmShow('i181');
 /* Name: On Click; */
 document.getElementById('i99').addEventListener('click', function(e){
     /*#i179.i180.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.officedepot.com.mx/officedepot/en/Enamorate-de-la-tecnologia?utm_source=Mosaic_Mobile&utm_medium=Banner_MKT_14_y_15_FEB&utm_campaign=MKT_14_y_15_FEB&utm_term=Paid&utm_content=OD'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.officedepot.com.mx/officedepot/en/Gran-Venta-Especial-por-internet?utm_source=Mosaic&utm_medium=Banner_18_al_21_Febrero&utm_campaign=Ec_18_al_21_Febrero&utm_term=Paid&utm_content=OD'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i6.i54.actions.js:actions/base/js*/
