--- a/office depot/fade-completo2.html
+++ b/office depot/fade-completo2.html
@@ -11,7 +11,7 @@
     <script type="text/javascript">
         function adfOpenGlobalClickTAG() {
             var adfClickTAGName = 'clickTAG',
-                adfClickTAGUrl = 'https://www.officedepot.com.mx/officedepot/en/';
+                adfClickTAGUrl = 'https://www.officedepot.com.mx/officedepot/en/Gran-Venta-Especial-por-internet?utm_source=Mosaic&utm_medium=Banner_18_al_21_Febrero&utm_campaign=Ec_18_al_21_Febrero&utm_term=Paid&utm_content=OD';
 
             window.open(dhtml.getVar(adfClickTAGName, adfClickTAGUrl), dhtml.getVar('landingPageTarget', '_blank'));
         }
