--- a/Victorias secret/Cube.html
+++ b/Victorias secret/Cube.html
@@ -551,6 +551,24 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(75px, 138px) rotate(0deg);
         transform: translate(0, 0) translate(75px, 138px) rotate(0deg);
 }
+/*#/#*//*#i4.i242.image.css:image/base/css*/
+#i242 { opacity: 1; }
+/*#/#*//*#i242.i243.positioning.css:positioning/base/css.2*/
+#i242 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 22px; height: 22px;
+        -ms-transform: translate(0, 0) translate(8px, 219px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(8px, 219px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(8px, 219px) rotate(0deg);
+        transform: translate(0, 0) translate(8px, 219px) rotate(0deg);
+}
+/*#/#*//*#i4.i244.image.css:image/base/css*/
+#i244 { opacity: 1; }
+/*#/#*//*#i244.i245.positioning.css:positioning/base/css.2*/
+#i244 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 22px; height: 22px;
+        -ms-transform: translate(0, 0) translate(37px, 219px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(37px, 219px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(37px, 219px) rotate(0deg);
+        transform: translate(0, 0) translate(37px, 219px) rotate(0deg);
+}
 /*#/#*//*#i50.i51.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i4 { cursor: pointer; }
 /*#/#*//*#i5.i30.shape.css:shape/base/css*/
@@ -694,6 +712,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     background-color: #5AAAD2;
 }
 
+/*#/#*//*#i4.i246.image.css:image/base/css*/
+#i246 { opacity: 1; }
+/*#/#*//*#i246.i247.positioning.css:positioning/base/css.2*/
+#i246 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 22px; height: 22px;
+        -ms-transform: translate(0, 0) translate(64px, 219px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(64px, 219px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(64px, 219px) rotate(0deg);
+        transform: translate(0, 0) translate(64px, 219px) rotate(0deg);
+}
 /*#/#*//*#i58.i59.positioning.css:positioning/base/css.1*/
 #i58 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 250px;
         -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
@@ -787,6 +814,33 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(85px, 142px) rotate(0deg);
         transform: translate(0, 0) translate(85px, 142px) rotate(0deg);
 }
+/*#/#*//*#i6.i248.image.css:image/base/css*/
+#i248 { opacity: 1; }
+/*#/#*//*#i248.i249.positioning.css:positioning/base/css.2*/
+#i248 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 22px; height: 22px;
+        -ms-transform: translate(0, 0) translate(9px, 219px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(9px, 219px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(9px, 219px) rotate(0deg);
+        transform: translate(0, 0) translate(9px, 219px) rotate(0deg);
+}
+/*#/#*//*#i6.i250.image.css:image/base/css*/
+#i250 { opacity: 1; }
+/*#/#*//*#i250.i251.positioning.css:positioning/base/css.2*/
+#i250 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 22px; height: 22px;
+        -ms-transform: translate(0, 0) translate(35px, 219px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(35px, 219px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(35px, 219px) rotate(0deg);
+        transform: translate(0, 0) translate(35px, 219px) rotate(0deg);
+}
+/*#/#*//*#i6.i252.image.css:image/base/css*/
+#i252 { opacity: 1; }
+/*#/#*//*#i252.i253.positioning.css:positioning/base/css.2*/
+#i252 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 22px; height: 22px;
+        -ms-transform: translate(0, 0) translate(63px, 218px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(63px, 218px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(63px, 218px) rotate(0deg);
+        transform: translate(0, 0) translate(63px, 218px) rotate(0deg);
+}
 /*#/#*//*#i54.i55.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i6 { cursor: pointer; }
 /*#/#*//*#i2.i3.positioning.css:positioning/base/css.1*/
@@ -812,11 +866,17 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/KQinLmx.jpg"/>
 <!--#/#--><!--#i4.i214.image.html:image/html-->
-<img id="i214" src="https://i.imgur.com/4W22b7q.png"/>
+<img id="i214" src="https://i.imgur.com/NHXEESu.jpg"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#--><!--#i4.i224.image.html:image/html-->
 <img id="i224" src="https://i.imgur.com/ThkenRu.png"/>
+<!--#/#--><!--#i4.i242.image.html:image/html-->
+<img id="i242" src="https://i.imgur.com/mJBNNLr.png"/>
+<!--#/#--><!--#i4.i244.image.html:image/html-->
+<img id="i244" src="https://i.imgur.com/dC7ka2p.png"/>
+<!--#/#--><!--#i4.i246.image.html:image/html-->
+<img id="i246" src="https://i.imgur.com/YN2Vf5g.png"/>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i2.i5.cube-panel.html:cube-panel/html-->
@@ -840,13 +900,19 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/3rNsjPu.jpg"/>
 <!--#/#--><!--#i6.i218.image.html:image/html-->
-<img id="i218" src="https://i.imgur.com/4W22b7q.png"/>
+<img id="i218" src="https://i.imgur.com/NHXEESu.jpg"/>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
 <div id="i34">Encuentra tu combinación ideal. ¡Localiza tu tienda más cercana!</div>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#--><!--#i6.i232.image.html:image/html-->
 <img id="i232" src="https://i.imgur.com/ThkenRu.png"/>
+<!--#/#--><!--#i6.i248.image.html:image/html-->
+<img id="i248" src="https://i.imgur.com/mJBNNLr.png"/>
+<!--#/#--><!--#i6.i250.image.html:image/html-->
+<img id="i250" src="https://i.imgur.com/dC7ka2p.png"/>
+<!--#/#--><!--#i6.i252.image.html:image/html-->
+<img id="i252" src="https://i.imgur.com/YN2Vf5g.png"/>
 <!--#/#-->
 </div>
 <!--#/#-->
@@ -918,6 +984,57 @@ var el = document.getElementById('i224');
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
+/*#/#*//*#i4.i242.image.js:image/base/js*/
+
+/*#/#*//*#i242.i243.positioning.js:positioning/base/js.2*/
+bmShow('i242');
+/*#/#*//*#i242.i260.actions.js:actions/base/js.1*/
+/* Name: On Click; */
+var el = document.getElementById('i242');
+
+el.addEventListener('click', function(e){
+    /*#i260.i261.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/iVB569UEMj22'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+
+if ('click' === 'click') {
+    el.style.cursor = 'pointer';
+}
+/*#/#*//*#i4.i244.image.js:image/base/js*/
+
+/*#/#*//*#i244.i245.positioning.js:positioning/base/js.2*/
+bmShow('i244');
+/*#/#*//*#i244.i262.actions.js:actions/base/js.1*/
+/* Name: On Click; */
+var el = document.getElementById('i244');
+
+el.addEventListener('click', function(e){
+    /*#i262.i263.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://plus.google.com/share?url=https://goo.gl/maps/iVB569UEMj22'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+
+if ('click' === 'click') {
+    el.style.cursor = 'pointer';
+}
+/*#/#*//*#i4.i246.image.js:image/base/js*/
+
+/*#/#*//*#i246.i247.positioning.js:positioning/base/js.2*/
+bmShow('i246');
+/*#/#*//*#i246.i264.actions.js:actions/base/js.1*/
+/* Name: On Click; */
+var el = document.getElementById('i246');
+
+el.addEventListener('click', function(e){
+    /*#i264.i265.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://goo.gl/maps/iVB569UEMj22'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+
+if ('click' === 'click') {
+    el.style.cursor = 'pointer';
+}
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
 /* Name: On Click; */
 
@@ -950,6 +1067,8 @@ bmShow('i228');
 /* Name: On Click; */
 var el = document.getElementById('i228');
 
+
+/*#/#*/
 
 
 if ('click' === 'click') {
@@ -987,6 +1106,58 @@ bmShow('i232');
 /* Name: On Click; */
 var el = document.getElementById('i232');
 
+
+
+if ('click' === 'click') {
+    el.style.cursor = 'pointer';
+}
+/*#/#*//*#i6.i248.image.js:image/base/js*/
+
+/*#/#*//*#i248.i249.positioning.js:positioning/base/js.2*/
+bmShow('i248');
+/*#/#*//*#i248.i254.actions.js:actions/base/js.1*/
+/* Name: On Click; */
+var el = document.getElementById('i248');
+
+el.addEventListener('click', function(e){
+    /*#i254.i255.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/iVB569UEMj22'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+
+if ('click' === 'click') {
+    el.style.cursor = 'pointer';
+}
+/*#/#*//*#i6.i250.image.js:image/base/js*/
+
+/*#/#*//*#i250.i251.positioning.js:positioning/base/js.2*/
+bmShow('i250');
+/*#/#*//*#i250.i256.actions.js:actions/base/js.1*/
+/* Name: On Click; */
+var el = document.getElementById('i250');
+
+el.addEventListener('click', function(e){
+    /*#i256.i257.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://plus.google.com/share?url=https://goo.gl/maps/iVB569UEMj22'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+
+if ('click' === 'click') {
+    el.style.cursor = 'pointer';
+}
+/*#/#*//*#i6.i252.image.js:image/base/js*/
+
+/*#/#*//*#i252.i253.positioning.js:positioning/base/js.2*/
+bmShow('i252');
+/*#/#*//*#i252.i258.actions.js:actions/base/js.1*/
+/* Name: On Click; */
+var el = document.getElementById('i252');
+
+el.addEventListener('click', function(e){
+    /*#i258.i259.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://goo.gl/maps/iVB569UEMj22'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -1046,6 +1217,21 @@ name: ThkenRu.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i224.i225.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i4.i242.image.meta:image/meta*/
+name: mJBNNLr.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i242.i243.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i4.i244.image.meta:image/meta*/
+name: dC7ka2p.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i244.i245.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i4.i246.image.meta:image/meta*/
+name: YN2Vf5g.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i246.i247.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i2.i5.cube-panel.meta:cube-panel/meta*/
     name: Cube Panel 2;
 /*#/#*//*#i5.i30.shape.meta:shape/meta*/
@@ -1099,6 +1285,21 @@ data: /*!*/{}/*!*/;
 name: ThkenRu.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i232.i233.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i6.i248.image.meta:image/meta*/
+name: mJBNNLr.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i248.i249.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i6.i250.image.meta:image/meta*/
+name: dC7ka2p.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i250.i251.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i6.i252.image.meta:image/meta*/
+name: YN2Vf5g.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i252.i253.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
