--- a/Marival/fade-completo.html
+++ b/Marival/fade-completo.html
@@ -104,7 +104,7 @@
 
          .cta {
             position: absolute;
-            margin-top: 452px;
+            margin-top: 455px;
             width:230px;
             line-height: 1.3em;
             z-index: 5;
@@ -357,7 +357,7 @@
 
     
   <div class="cta"> <a href="https://www.marivalarmony.com/" target="_blank">
-    <img src="https://i.imgur.com/OIaU5te.png" style="height: 40px;"></a></div>   
+    <img src="https://i.imgur.com/51JmcnL.png" style="height: 40px;"></a></div>   
   
      
   
