--- a/Marival/Video.html
+++ b/Marival/Video.html
@@ -325,7 +325,7 @@
         </script>
         <div onclick="openUrl();">
        
-           <div class="tgx_logo"><a href="https://www.marivalarmony.com/"></a><img style="height: 40px;" src="https://i.imgur.com/yC5f2kE.png"></div>
+           <div class="tgx_logo"><a href="https://www.marivalarmony.com/"></a><img style="height: 40px;" src="https://i.imgur.com/51JmcnL.png"></div>
            
         <div class="videonew_text"> 
             <span class="videonew_text_title videonew_text_bold">
