--- a/LaIsla-Merida/Cube.html
+++ b/LaIsla-Merida/Cube.html
@@ -906,7 +906,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i234.image.html:image/html-->
 <img id="i234" src="https://i.imgur.com/2U0x9fw.jpg"/>
 <!--#/#--><!--#i5.i194.text.html:text/html-->
-<div id="i194">Para ella y para él, encuentra prendas con diseños exclusivos en Keten.</div>
+<div id="i194">Para ella y para él, encuentra prendas con diseños exclusivos en Guess.</div>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#--><!--#i5.i240.image.html:image/html-->
@@ -926,7 +926,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i236.image.html:image/html-->
 <img id="i236" src="https://i.imgur.com/2U0x9fw.jpg"/>
 <!--#/#--><!--#i6.i196.text.html:text/html-->
-<div id="i196">¿Por qué todas las mejores marcas están en LaIslaMérida?</div>
+<div id="i196">¿Por qué todas las mejores marcas están en La Isla Mérida?</div>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#--><!--#i6.i238.image.html:image/html-->
