--- a/LaIsla-Merida/Cube3.html
+++ b/LaIsla-Merida/Cube3.html
@@ -884,7 +884,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i181.image.html:image/html-->
 <img id="i181" src="https://i.imgur.com/2U0x9fw.jpg"/>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">En LaislaMérida tenemos eventos para toda la familia.</div>
+<div id="i14">En La Isla Mérida tenemos eventos para toda la familia.</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/GUQfqPL.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
