--- a/Marival/Cube.html
+++ b/Marival/Cube.html
@@ -920,7 +920,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i24.text.html:text/html-->
-<div id="i24">Specialty restaurants, beautiful gardens, privileged views</div>
+<div id="i24">Specialty restaurants, beautiful gardens, privileged views.</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/rQWUh0L.jpg"/>
 <!--#/#--><!--#i5.i184.image.html:image/html-->
