--- a/Marival/Video.html
+++ b/Marival/Video.html
@@ -329,7 +329,7 @@
            
         <div class="videonew_text"> 
             <span class="videonew_text_title videonew_text_bold">
-               Introducing a new paradise.¡Grand Opening May 2019!
+               Introducing a new paradise. </br>Grand Opening May 2019!
             </span>
            
 
