--- a/Victorias secret/Cube.html
+++ b/Victorias secret/Cube.html
@@ -862,11 +862,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">¿Ya sabes donde adquirir tu lencería ideal? ¡Estamos cerca de tí!</div>
+<div id="i14">¿Ya sabes dónde adquirir tu lencería ideal? ¡Estamos cerca de tí!</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/KQinLmx.jpg"/>
 <!--#/#--><!--#i4.i214.image.html:image/html-->
-<img id="i214" src="https://i.imgur.com/NHXEESu.jpg"/>
+<img id="i214" src="https://i.imgur.com/4W22b7q.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#--><!--#i4.i224.image.html:image/html-->
@@ -900,7 +900,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/3rNsjPu.jpg"/>
 <!--#/#--><!--#i6.i218.image.html:image/html-->
-<img id="i218" src="https://i.imgur.com/NHXEESu.jpg"/>
+<img id="i218" src="https://i.imgur.com/4W22b7q.png"/>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
 <div id="i34">Encuentra tu combinación ideal. ¡Localiza tu tienda más cercana!</div>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
