--- a/Victorias secret/Video.html
+++ b/Victorias secret/Video.html
@@ -329,7 +329,7 @@
            
         <div class="videonew_text"> 
             <span class="videonew_text_title videonew_text_bold">
-               El comfort perfecto para cada día. ¿ya sabes donde encontrar el tuyo?
+               El comfort perfecto para cada día. ¿ya sabes dónde encontrar el tuyo?
             </span>
            
 
