--- a/Formatos ADS/Formulario hover/evento definitivo/formulario-def.html
+++ b/Formatos ADS/Formulario hover/evento definitivo/formulario-def.html
@@ -125,7 +125,7 @@
     background:#ffffff;
     border-radius:0px;
     box-shadow:0 0 0px 0px #fff;
-    /*margin:calc(30vh - 220px) auto;*/
+    margin:calc(30vh - 220px) auto;
     padding:20px 30px;
     max-width:calc(100vw - 40px);
     box-sizing:border-box;
