--- a/Formatos ADS/Formulario hover/evento definitivo/formulario-def.html
+++ b/Formatos ADS/Formulario hover/evento definitivo/formulario-def.html
@@ -125,7 +125,6 @@
     background:#ffffff;
     border-radius:0px;
     box-shadow:0 0 0px 0px #fff;
-    margin:calc(30vh - 220px) auto;
     padding:20px 30px;
     max-width:calc(100vw - 40px);
     box-sizing:border-box;
@@ -224,6 +223,7 @@
             <div class="details" style="background-color: white">
                 <!--<iframe src="Formulario.html" width="306" height="605" frameborder="0" scrolling="no" position="absolute" style="margin-left: 0px; margin-top: -8px;"></iframe>-->
                 <form id="question" class="FR form">
+                    <center>
                     <span style="bottom:10px; text-align:center ; float:center; background-color: #fff;"> <img src="https://i.imgur.com/llL3jat.png" style="height:80px; text-decoration: none; border-radius:0px; margin-top:30px; margin-left: -10px;
     box-shadow:0 0 0px 0px #fff;"></span>
 
@@ -234,21 +234,22 @@
                     </span>
 
                     <!--<h2>CONTÁCTANOS</h2>-->
-                    <p type="Nombre:"><input placeholder="Escribe tu nombre:" name="name" type="text"></p>
-                    <p type="E-mail:"><input placeholder="Escribe tu dirección de E-mail" name="email" type="email" required="true"></p>
+                    <p style="width: 100%; text-align: left" type="Nombre:"><input placeholder="Escribe tu nombre:" name="name" type="text"></p>
+                    <p style="width: 100%; text-align: left" type="E-mail:"><input placeholder="Escribe tu dirección de E-mail" name="email" type="email" required="true"></p>
                     <!--<p type="MeNSAJE:"><input placeholder="¿Qué quisieras decirnos?"></input></p>-->
 
-                    <span style="display: flex; margin-top: 35px">
+                    <span style="display: flex; text-align: left; margin-top: 35px">
 
                         <label style="min-width: 80%" for="condiciones"><a href="https://www.up.edu.mx/sites/default/files/up_mexico_vf-aviso_aspirantes_internet_0.pdf" target="_blank" style="font-size: 12px;"> He leído y acepto los términos y condiciones.</a></label><input type="checkbox" name="condiciones" required="true" />
                     </span>
 
                     <input type="submit" name="bottom" style="margin-top: 30px; text-align: center; background-color:#a50118; color: white; border: none; width: 90px; position: absolute; left: 50%; margin-left: -40px; cursor: pointer" value="ENVIAR">
+                </center>
                 </form>
             </div>
 
             <div class="FR red">
-                
+                <center>
                 <span class="s-I" style=""> 
                     <img src="https://i.imgur.com/llL3jat.png" style="height:80px; text-decoration: none; border-radius:0px;
     box-shadow:0 0 0px 0px #fff;"></span>
@@ -263,7 +264,7 @@
                     <input type="button" name="send" id="send" style="text-align: center; background-color:#a50118; color: white; border: none; width: 200px; cursor: pointer" value="VISITA NUESTRA WEBSITE">
                 </a>
                 </span>
-
+                    </center>
             </div>
             
             <style>
