--- a/Formatos ADS/Formulario hover/evento definitivo/formulario-def.html
+++ b/Formatos ADS/Formulario hover/evento definitivo/formulario-def.html
@@ -126,6 +126,7 @@
     border-radius:0px;
     box-shadow:0 0 0px 0px #fff;
     padding:20px 30px;
+    /*max-width: calc(100vw - 40px);*/
     max-width:calc(100vw - 40px);
     box-sizing:border-box;
     font-family:'Montserrat',sans-serif;
