--- a/Formatos ADS/Formulario hover/evento definitivo/formulario-def.html
+++ b/Formatos ADS/Formulario hover/evento definitivo/formulario-def.html
@@ -253,7 +253,7 @@
                 <center>
                 <span class="s-I" style=""> 
                     <img src="https://i.imgur.com/llL3jat.png" style="height:80px; text-decoration: none; border-radius:0px;
-    box-shadow:0 0 0px 0px #fff;"></span>
+    box-shadow:0 0 0px 0px #fff; margin-top: 20px;"></span>
 
                 <span class="s-II bzm_text_title  bzm_text_medium" style="">
 
