--- a/Cencosud/formulario-def.html
+++ b/Cencosud/formulario-def.html
@@ -279,7 +279,7 @@
 
                     <span style="display: flex; text-align: left; margin-top: 15px">
 
-                        <label style="min-width: 100%; float: right;" for="condiciones"><a href="https://momentosbancocencosud.pe/politica-de-proteccion-de-datos/" target="_blank" style="font-size: 9px;"> He leído y acepto las condiciones de tratamiento de mis datos personales.</a></label><input type="checkbox"  ="condiciones" required="true" style="text-align: left;" />
+                        <label style="min-width: 80%; float: right;" for="condiciones"><a href="https://momentosbancocencosud.pe/politica-de-proteccion-de-datos/" target="_blank" style="font-size: 9px;"> He leído y acepto las condiciones de tratamiento de mis datos personales.</a></label><input type="checkbox"  ="condiciones" required="true" style="text-align: left;" />
                     </span>
 
                     <input type="submit" name="bottom" style="margin-top: 14px; text-align: center; background-color:#f07f13; color: white; border-radius: 3px; width: 100px; position: absolute; left: 50%; margin-left: -40px; cursor: pointer" value="SOLICITAR">
@@ -299,7 +299,7 @@
                 </span>
 
                 <span class="s-III" style="margin-top: -40px;">
-                <a href="https://www.up.edu.mx/en/international/mex" target="_blank">
+                <a href="https://momentosbancocencosud.pe/" target="_blank">
                     <input type="button" name="send" id="send" style="text-align: center; background-color:#f07f13; color: white; border: none; border-radius: 2px; width: 230px; cursor: pointer" value="VISITA NUESTRA WEBSITE">
                 </a>
                 </span>
@@ -336,7 +336,7 @@
         <!--</a>-->
     </div>
 
-    <script>
+ <script>
         $(document).ready(function() {
 
             $('.screen1').click(function() {
@@ -348,7 +348,7 @@
                 dhtml.sendEvent('2', 'Formulario_Vacio', null);
             });
 
-            $('form#question').on('submit', function () {
+             $('form#question').on('submit', function () {
 
                 var inputs = $("form#question :input"); 
                 var responseData = {};
