--- a/Cencosud/formulario-def.html
+++ b/Cencosud/formulario-def.html
@@ -155,6 +155,7 @@
  #question option  {
      color: #a4a3a3;
     text-align: left;
+    font-size: 9px;
 }
     .FR{
     width:300px;
@@ -261,14 +262,17 @@
                 <!--<iframe src="Formulario.html" width="306" height="605" frameborder="0" scrolling="no" position="absolute" style="margin-left: 0px; margin-top: -8px;"></iframe>-->
                 <form id="question" class="FR form">
                     <center>
-                    <span style="bottom:10px; text-align:center ; float:center; background-color: #f4f4f4;"> <img src="https://i.imgur.com/g38Y2AQ.jpg" style="height:90px; width: 270px; text-decoration: none; border-radius:0px; margin-top:30px; margin-left: -30px;
+                    <span style="bottom:1px; text-align:center ; float:center; background-color: #f4f4f4;"> <img src="https://i.imgur.com/h4Izog3.png" style="height:60px; width: 120px; text-decoration: none; border-radius:0px; margin-top:10px; margin-left: -25px;
     box-shadow:0 0 0px 0px #fff; margin-bottom: -5px;"></span>
+
+    <span style="bottom:10px; text-align:center ; float:center; background-color: #f4f4f4;"> <img src="https://i.imgur.com/g38Y2AQ.jpg" style="height:60px; width: 210px; text-decoration: none; border-radius:0px; margin-top:15px; margin-left: -30px;
+    box-shadow:0 0 0px 0px #fff; margin-bottom: -20px;"></span>
 
                     
 
                     <!--<h2>CONTÁCTANOS</h2>-->
-                    <p style="text-align: left; margin-bottom: -12px;" ><select name="TDC CENCOSUD" style="text-align: left;">
-     <option color="#f4f4f4">TDC CENCOSUD</option>
+                    <p style="text-align: left; margin-bottom: -12px; font-size: 8px;" ><select name="TDC CENCOSUD" style="text-align: left;">
+     <option color="#f4f4f4">TARJETA DE CREDITO CENCOSUD</option>
      
    </select></p>
                     <p style="width: 100%; text-align: left; margin-bottom: -12px;" ><input placeholder="NOMBRES" name="name" type="text"></p>
@@ -279,7 +283,7 @@
 
                     <span style="display: flex; text-align: left; margin-top: 15px">
 
-                        <label style="min-width: 80%; float: right;" for="condiciones"><a href="https://momentosbancocencosud.pe/politica-de-proteccion-de-datos/" target="_blank" style="font-size: 9px;"> He leído y acepto las condiciones de tratamiento de mis datos personales.</a></label><input type="checkbox"  ="condiciones" required="true" style="text-align: left;" />
+                        <label style="min-width: 80%; float: right;" for="condiciones"><a href="https://momentosbancocencosud.pe/politica-de-proteccion-de-datos/" target="_blank" style="font-size: 8px;"> He leído y acepto las condiciones de tratamiento de mis datos personales.</a></label><input type="checkbox"  ="condiciones" required="true" style="text-align: left;" />
                     </span>
 
                     <input type="submit" name="bottom" style="margin-top: 14px; text-align: center; background-color:#f07f13; color: white; border-radius: 3px; width: 100px; position: absolute; left: 50%; margin-left: -40px; cursor: pointer" value="SOLICITAR">
