--- a/Cencosud/formulario-def.html
+++ b/Cencosud/formulario-def.html
@@ -276,7 +276,7 @@
      
    </select></p>
                     <p style="width: 100%; text-align: left; margin-bottom: -12px;" ><input placeholder="NOMBRES" name="name" type="text"></p>
-                    <p style="width: 100%; text-align: left; margin-bottom: -12px;" ><input placeholder="APELLIDOS" name="email" type="email" required="true"></p>
+                    <p style="width: 100%; text-align: left; margin-bottom: -12px;" ><input placeholder="APELLIDOS" name="email" type="email"></p>
                    <p style="width: 100%; text-align: left; margin-bottom: -12px;"  ><input placeholder="DNI"></input></p>
                    <p style="width: 100%; text-align: left; margin-bottom: -12px;" ><input placeholder="EMAIL"></input></p>
                     <p style="width: 100%; text-align: left; margin-bottom: -12px;"  ><input placeholder="TELÉFONO"></input></p>
@@ -299,7 +299,7 @@
 
                 <span class="s-II bzm_text_title  bzm_text_medium" style="margin-top: -40px;">
 
-                    <img src="https://i.imgur.com/hCWdiMC.jpg" style="height:150px; width: 290px; text-decoration: none;">
+                    <img src="https://i.imgur.com/9yrux60.jpg" style="height:150px; width: 290px; text-decoration: none;">
                 </span>
 
                 <span class="s-III" style="margin-top: -40px;">
