--- a/Cencosud/New folder/formulario-def.html
+++ b/Cencosud/New folder/formulario-def.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="ad.size" content="width=320, height=480" />
     <title>300-600 slidemap</title>
-    <link href='https://fonts.googleapis.com/css?family=Trebuchet MS' rel='stylesheet' type='text/css'>
+    
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script type="text/javascript">
         var script = document.createElement('script');  
@@ -283,7 +283,7 @@
 
                     <span style="display: flex; flex-direction: row-reverse; justify-content: space-between; width: 100%; margin-top: 15px">
 
-                        <label style="min-width: 80%" for="condiciones"><a href="https://momentosbancocencosud.pe/politica-de-proteccion-de-datos/" target="_blank" style="font-size: 10px; font-family: Trebuchet MS"> He leído y acepto las condiciones de tratamiento de mis datos personales.</a></label>
+                        <label style="min-width: 80%" for="condiciones"><a href="https://momentosbancocencosud.pe/politica-de-proteccion-de-datos/" target="_blank" style="font-size: 8px;"> He leído y acepto las condiciones de tratamiento de mis datos personales.</a></label>
                         
                         <input type="checkbox" width="10" required="true" style="text-align: left; background-color: red" />
                     </span>
