--- a/Cencosud/formulario-def.html
+++ b/Cencosud/formulario-def.html
@@ -276,7 +276,7 @@
      
    </select></p>
                     <p style="width: 100%; text-align: left; margin-bottom: -12px;" ><input placeholder="NOMBRES" name="name" type="text"></p>
-                    <p style="width: 100%; text-align: left; margin-bottom: -12px;" ><input placeholder="APELLIDOS" name="email" type="email"></p>
+                    <p style="width: 100%; text-align: left; margin-bottom: -12px;" ><input placeholder="APELLIDOS" name="name" type="text"></p>
                    <p style="width: 100%; text-align: left; margin-bottom: -12px;"  ><input placeholder="DNI"/></p>
                    <p style="width: 100%; text-align: left; margin-bottom: -12px;" ><input placeholder="EMAIL"/></p>
                     <p style="width: 100%; text-align: left; margin-bottom: -12px;"  ><input placeholder="TELÉFONO"/></p>
