--- a/Movistar peru/Cube.html
+++ b/Movistar peru/Cube.html
@@ -1046,7 +1046,7 @@ var el = document.getElementById('i196');
 
 el.addEventListener('click', function(e){
     /*#i222.i223.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://api.whatsapp.com/send?phone=+573116273421&text=Hola quiero recibir información.'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'whatsapp://send?text=Mira lo que he encontrado http://www.movistar.com.pe/movil/preplan'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1125,7 +1125,7 @@ var el = document.getElementById('i206');
 
 el.addEventListener('click', function(e){
     /*#i228.i229.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://api.whatsapp.com/send?phone=+573116273421&text=Hola quiero recibir información.'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'whatsapp://send?text=Mira lo que he encontrado http://www.movistar.com.pe/movil/preplan'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1204,7 +1204,7 @@ var el = document.getElementById('i212');
 
 el.addEventListener('click', function(e){
     /*#i234.i235.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://api.whatsapp.com/send?phone=+573116273421&text=Hola quiero recibir información.'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'whatsapp://send?text=Mira lo que he encontrado http://www.movistar.com.pe/movil/preplan'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
