--- a/Movistar peru/Venetian.html
+++ b/Movistar peru/Venetian.html
@@ -2415,7 +2415,7 @@ var el = document.getElementById('i34');
 
 el.addEventListener('click', function(e){
     /*#i40.i41.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://api.whatsapp.com/send?phone=+573116273421&text=Hola quiero recibir información.'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira lo que he encontrado http://www.movistar.com.pe/movil/preplan'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
