--- a/Bestdays disney/FadeBig.html
+++ b/Bestdays disney/FadeBig.html
@@ -342,7 +342,7 @@
               ¿Tienes un mejor plan para la familia?
             </span>
             <span class="tgx_text_medium tgx_text_small">
-              <p>El pase Mágico Value de 4 Parques incluye admisión a los 4 parques temático de Walt Disney World (1) día por parque,: 1 Magic Kingdom, 1 Epcot Center, 1 Disney's Hollywood Studios y 1 Animal Kingdom.</p>
+              <p>El pase Mágico Value de 4 Parques incluye admisión a los 4 parques temáticos de Walt Disney World 1 día por parque: 1 Magic Kingdom, 1 Epcot Center, 1 Disney's Hollywood Studios y 1 Animal Kingdom.</p>
             </span>
             <br/>  
             
