--- a/HardRock Guadalajara/Venetian.html
+++ b/HardRock Guadalajara/Venetian.html
@@ -2419,7 +2419,7 @@ var el = document.getElementById('i35');
 
 el.addEventListener('click', function(e){
     /*#i41.i42.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'http://hrhguadalajara.com/planea-tu-evento/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira lo que he encontrado http://hrhguadalajara.com/planea-tu-evento/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
