--- a/HardRock Guadalajara/Cube.html
+++ b/HardRock Guadalajara/Cube.html
@@ -948,7 +948,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
-<div id="i34">Nuestra pasión es tu salud. 
+<div id="i34">Un sitio increíble, ¿No crees? 
 ¡Te esperamos!</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/C5S595G.png"/>
