--- a/Serie Matrimonio/ZoomExp300x600.html
+++ b/Serie Matrimonio/ZoomExp300x600.html
@@ -165,7 +165,7 @@ a {text-decoration: none;}
       <img src="https://i.imgur.com/3nNlnwD.png">
       
     <li>
-      <img src="https://i.imgur.com/lD1jEoX.png">
+      <img src="https://i.imgur.com/eW9C2iO.png">
       
     </li>
 
