--- a/Serie Matrimonio/Video.html
+++ b/Serie Matrimonio/Video.html
@@ -347,7 +347,7 @@
                     </span>
                 </div>
                 <div class="logo">
-                    <img src="https://i.imgur.com/fFKmQYD.png" style="height:30px;margin-top: -35px; ">
+                    <img src="https://i.imgur.com/fFKmQYD.png" style="height:30px;margin-top: -35px; margin-right:-105px; ">
                 </div>
             
         </div>
