--- a/Serie Matrimonio/Video.html
+++ b/Serie Matrimonio/Video.html
@@ -325,7 +325,7 @@
         </script>
         <div onclick="openUrl();">
        
-           <div class="tgx_logo"><a href="https://youtu.be/Dbutr6xHCpM"></a><span class="bzm_text_title bzm_text_bold" style="font-size:75%; color: white;"><i><b>¿Si quieres?</b></i></span></div>
+           <div class="tgx_logo"><a href="https://youtu.be/Dbutr6xHCpM"></a><span class="bzm_text_title bzm_text_bold" style="font-size:75%; color: white;"><i><b>Si, ¿quiero?</b></i></span></div>
            
         <div class="videonew_text"> 
             <span class="videonew_text_title videonew_text_bold">
