--- a/Serie Matrimonio/ZoomExp300x600.html
+++ b/Serie Matrimonio/ZoomExp300x600.html
@@ -152,7 +152,7 @@ a {text-decoration: none;}
  	 <div class="wrapper size_300x250">
     
 
-  <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:75%; color: white;"><i><b>¿Si quieres?</b></i></span></div>
+  <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:75%; color: white;"><i><b>Si, ¿quiero?</b></i></span></div>
 <div class="ism-slider" data-transition_type="zoom" data-play_type="loop" data-interval="3000" data-image_fx="zoompan" data-buttons="false" data-radios="false" id="my-slider" style="width: 300px; height: 450px; border-radius: none;">
   <ol>
     <li>
